output of RemoveAnnotationsForInference